--- a/orchestre/index.html
+++ b/orchestre/index.html
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2444714722';
+    var serviceWorkerVersion = '189246614';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -100,5 +100,30 @@
       loadMainDartJs();
     }
   </script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyDErt6afQjH1Y02ztDh-tf5uiQG9Jp88Lw",
+      authDomain: "orchestre-c9bf8.firebaseapp.com",
+      projectId: "orchestre-c9bf8",
+      storageBucket: "orchestre-c9bf8.appspot.com",
+      messagingSenderId: "167462351653",
+      appId: "1:167462351653:web:4e7c23ffac6c3f30b760cc",
+      measurementId: "G-L2BM4V1XL4"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    firebase.auth();
+    firebase.analytics();
+    firebase.firestore();
+    firebase.storage();
+  </script>
+
 </body>
 </html>
